--- a/index.html
+++ b/index.html
@@ -4,7 +4,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/png" href="/favicon.png" />
+  <link rel="apple-touch-icon" sizes="57x57" href="/favicon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="/assets/icons/favicon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="/assets/icons/favicon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="/assets/icons/favicon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="/assets/icons/favicon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="/assets/icons/favicon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="/assets/icons/favicon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="/assets/icons/favicon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/favicon-180x180.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="/assets/icons/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="192x192" href="/assets/icons/favicon-192x192.png">
+<link rel="shortcut icon" type="image/x-icon" href="/assets/icons/favicon.ico">
+<link rel="icon" type="image/x-icon" href="/assets/icons/favicon.ico">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="/assets/icons/favicon-144x144.png">
+<meta name="msapplication-config" content="/assets/icons/browserconfig.xml">
   <title>Full Index</title>
   <link rel="stylesheet" href="/assets/styles.css" />
   <style>
@@ -55,23 +72,21 @@ body {
   <header style="display: flex; justify-content: space-between; font-size: 2em; width: 100%; margin: 0.5em 0; color: coral;">
     <div style="flex: 1;"></div>
     <div style="flex: 1; display: flex; justify-content: center;" >
-      <div style="max-width: 1.1em; max-height: 1.1em; flex: 1; font-weight: 900;">
-        𓆲
-        <!-- <svg fill="currentColor" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg" version="1.1" viewBox="0 -622 740 752.99999"    >
+      <div style="max-width: 1.1em; max-height: 1.1em; flex: 1;"><svg fill="currentColor" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg" version="1.1" viewBox="0 -622 740 752.99999"    >
         <g  transform="translate(-51,-341)">
           <path d="M 333,472 H 508 V 247 L 703,360 791,208 596,96 791,-16 703,-168 508,-55 V -281 H 333 V -56 L 138,-168 51,-16 245,96 51,208 138,360 333,248 c 0,0 0,224 0,224 z" />
         </g>
-      </svg> -->
-    </div>
+      </svg></div>
       </div>
     <div style="flex: 1; text-align: right; display: flex; align-items: center; justify-content: flex-end; font-size: 0.5em;"><a href="/out/about.html">About</a></div>
   </header>
-  <p class="txt-c whitespace-pre human"><!-- ʕっ•ᴥ•ʔっ -->
-    Hi!, I'm <span style="font-size: 1.3em; color: #CCCCFF;">David</span>, a engineering student from India, Welcome to my tiny slice of the internet
+  <p class="txt-c whitespace-pre human">ʕっ•ᴥ•ʔっ
+    Hi!, I'm David, a hobbyist techie from India, Welcome to my tiny slice of the internet
   </p>
 
   <h1>Projects</h1>
-  <div class="split">
+  <a href="/projects">See all (w/ writeups)</a>
+  <div class="split" style="margin-top: 1em;">
     <div>
       <a href="https://github.com/undefinedDarkness/mkr">mkr</a>
       <p>A fast extensible app runner for the Linux Desktop</p>
@@ -137,6 +152,7 @@ body {
       </li>
       <li><a class='special' href='/out/random/gsenjounomaou.html'>G-Senjou No Maou (Devil on G String)</a></li>
 
+      <li><a href="/out/random/tidbits.html">Tidbits</a></li>
     </ul>
     <ul>
       <li>
