--- a/experiments/fsa.html
+++ b/experiments/fsa.html
@@ -11,6 +11,7 @@
     <button onclick="openPicker()">Open Directory Picker</button>
     <h2 id="dirName"></h2>
     <div id="dirList" style="white-space: normal;"></div>
+    <script src="https://cdn.jsdelivr.net/npm/@iframe-resizer/child@5.3.2" type="text/javascript" async></script>
     <script src="./fsa.js"></script>
     </article>
 
