--- a/src/index.html
+++ b/src/index.html
@@ -130,12 +130,23 @@ body {
         <h2>2024</h1>
       </li>
       !POSTS-2024!
+    </ul><ul>
+      <li>
+        <h2>2025</h1>
+      </li>
+      !POSTS-2025!
     </ul>
     <ul>
       <li>
         <h2>Random</h1>
       </li>
       !POSTS-RANDOM!
+      <li>
+        <a href="https://red-herring.notion.site/">Tidbits</a>
+      </li>
+      <li>
+        <a href="https://red-herring.notion.site/LinkDB-af4d322446f342f1a6fe7463ee5db8d3">LinkDB</a>
+      </li>
     </ul>
     <ul>
       <li>
