--- a/experiments/code-highlight-cp/index.html
+++ b/experiments/code-highlight-cp/index.html
@@ -170,7 +170,7 @@
               <input type="number" id="fontSize" v-model="fontSize" min="10" max="30" step="1">
             </div>
 
-            <button @click="highlightCode">Highlight Code</button>
+            <button @click="highlightCode">Highlight Code -></button>
           </div>
         </div>
 
