--- a/src/index.html
+++ b/src/index.html
@@ -5,30 +5,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="apple-touch-icon" sizes="57x57" href="/favicon-57x57.png">
-<link rel="apple-touch-icon" sizes="60x60" href="/assets/icons/favicon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="/assets/icons/favicon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="/assets/icons/favicon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114" href="/assets/icons/favicon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="/assets/icons/favicon-120x120.png">
-<link rel="apple-touch-icon" sizes="144x144" href="/assets/icons/favicon-144x144.png">
-<link rel="apple-touch-icon" sizes="152x152" href="/assets/icons/favicon-152x152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/favicon-180x180.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="96x96" href="/assets/icons/favicon-96x96.png">
-<link rel="icon" type="image/png" sizes="192x192" href="/assets/icons/favicon-192x192.png">
-<link rel="shortcut icon" type="image/x-icon" href="/assets/icons/favicon.ico">
-<link rel="icon" type="image/x-icon" href="/assets/icons/favicon.ico">
-<meta name="msapplication-TileColor" content="#ffffff">
-<meta name="msapplication-TileImage" content="/assets/icons/favicon-144x144.png">
-<meta name="msapplication-config" content="/assets/icons/browserconfig.xml">
+  <link rel="apple-touch-icon" sizes="60x60" href="/assets/icons/favicon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/assets/icons/favicon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/assets/icons/favicon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/assets/icons/favicon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/assets/icons/favicon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/assets/icons/favicon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/assets/icons/favicon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/favicon-180x180.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/assets/icons/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="/assets/icons/favicon-192x192.png">
+  <link rel="shortcut icon" type="image/x-icon" href="/assets/icons/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/assets/icons/favicon.ico">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/assets/icons/favicon-144x144.png">
+  <meta name="msapplication-config" content="/assets/icons/browserconfig.xml">
   <title>Full Index</title>
   <link rel="stylesheet" href="/assets/styles.css" />
   <style>
-
-body {
-  padding: 0 16vw;
-}
+    body {
+      padding: 0 16vw;
+    }
 
     main.ov {
       display: grid;
@@ -40,121 +39,328 @@ body {
       margin-top: 0;
     }
 
-    ul h2 {
-      margin-top: 0.5em;
-    }
-
     main ul {
-      /* margin-top: 2em !important; */
+      margin-top: 1.5em !important;
       margin-bottom: 0;
-      min-width: fit-content;
       list-style-type: none;
+      max-height: 50vh;
+      overflow-y: scroll;
+      scrollbar-color: var(--white-darker) var(--white-lighter) ;
       padding: 0;
-    }
-
-    ul li:not(:first-child) {
-      margin: 0.5em !important;
-      margin-left: 0.8em;
     }
 
     ul li a {
       text-decoration: none;
+      font-size: 1.4em;
+    }
+
+    ul li img {
+      max-width: 4em;
+      max-height: 4em;
+      aspect-ratio: 1/1;
+    }
+
+    ul li {
+      margin-bottom: 0.4em;
+      display: flex;
+      gap: 1em;
     }
 
 
     h1 {
       margin-bottom: 0;
     }
+
+    a.special::before {
+      content: "";
+      background-color: var(--white-darker);
+      position: absolute;
+      width: 0;
+      height: 100%;
+      z-index: -1;
+    }
+
+    a.special:hover::before {
+      width: 100%;
+      padding: 0 0.2em;
+    }
+
+    a.special {
+      position: relative;
+      font-family: 'Body Font';
+      display: inline-block;
+    }
+
+    .card {
+      border: 1px solid;
+      flex: 1;
+    }
+
+    .card h2 {
+      text-align: center;
+    }
+
+    .pixel-corners,
+    .pixel-corners--wrapper {
+      clip-path: polygon(0px calc(100% - 15px),
+          3px calc(100% - 15px),
+          3px calc(100% - 9px),
+          6px calc(100% - 9px),
+          6px calc(100% - 6px),
+          9px calc(100% - 6px),
+          9px calc(100% - 3px),
+          15px calc(100% - 3px),
+          15px 100%,
+          calc(100% - 15px) 100%,
+          calc(100% - 15px) calc(100% - 3px),
+          calc(100% - 9px) calc(100% - 3px),
+          calc(100% - 9px) calc(100% - 6px),
+          calc(100% - 6px) calc(100% - 6px),
+          calc(100% - 6px) calc(100% - 9px),
+          calc(100% - 3px) calc(100% - 9px),
+          calc(100% - 3px) calc(100% - 15px),
+          100% calc(100% - 15px),
+          100% 15px,
+          calc(100% - 3px) 15px,
+          calc(100% - 3px) 9px,
+          calc(100% - 6px) 9px,
+          calc(100% - 6px) 6px,
+          calc(100% - 9px) 6px,
+          calc(100% - 9px) 3px,
+          calc(100% - 15px) 3px,
+          calc(100% - 15px) 0px,
+          15px 0px,
+          15px 3px,
+          9px 3px,
+          9px 6px,
+          6px 6px,
+          6px 9px,
+          3px 9px,
+          3px 15px,
+          0px 15px);
+      position: relative;
+    }
+
+    .pixel-corners {
+      border: 3px solid transparent;
+    }
+
+    .pixel-corners--wrapper {
+      width: fit-content;
+      height: fit-content;
+    }
+
+    .pixel-corners--wrapper .pixel-corners {
+      display: block;
+      clip-path: polygon(3px 15px,
+          6px 15px,
+          6px 9px,
+          9px 9px,
+          9px 6px,
+          15px 6px,
+          15px 3px,
+          calc(100% - 15px) 3px,
+          calc(100% - 15px) 6px,
+          calc(100% - 9px) 6px,
+          calc(100% - 9px) 9px,
+          calc(100% - 6px) 9px,
+          calc(100% - 6px) 15px,
+          calc(100% - 3px) 15px,
+          calc(100% - 3px) calc(100% - 15px),
+          calc(100% - 6px) calc(100% - 15px),
+          calc(100% - 6px) calc(100% - 9px),
+          calc(100% - 9px) calc(100% - 9px),
+          calc(100% - 9px) calc(100% - 6px),
+          calc(100% - 15px) calc(100% - 6px),
+          calc(100% - 15px) calc(100% - 3px),
+          15px calc(100% - 3px),
+          15px calc(100% - 6px),
+          9px calc(100% - 6px),
+          9px calc(100% - 9px),
+          6px calc(100% - 9px),
+          6px calc(100% - 15px),
+          3px calc(100% - 15px));
+    }
+
+    .pixel-corners::after,
+    .pixel-corners--wrapper::after {
+      content: "";
+      position: absolute;
+      clip-path: polygon(0px calc(100% - 15px),
+          3px calc(100% - 15px),
+          3px calc(100% - 9px),
+          6px calc(100% - 9px),
+          6px calc(100% - 6px),
+          9px calc(100% - 6px),
+          9px calc(100% - 3px),
+          15px calc(100% - 3px),
+          15px 100%,
+          calc(100% - 15px) 100%,
+          calc(100% - 15px) calc(100% - 3px),
+          calc(100% - 9px) calc(100% - 3px),
+          calc(100% - 9px) calc(100% - 6px),
+          calc(100% - 6px) calc(100% - 6px),
+          calc(100% - 6px) calc(100% - 9px),
+          calc(100% - 3px) calc(100% - 9px),
+          calc(100% - 3px) calc(100% - 15px),
+          100% calc(100% - 15px),
+          100% 15px,
+          calc(100% - 3px) 15px,
+          calc(100% - 3px) 9px,
+          calc(100% - 6px) 9px,
+          calc(100% - 6px) 6px,
+          calc(100% - 9px) 6px,
+          calc(100% - 9px) 3px,
+          calc(100% - 15px) 3px,
+          calc(100% - 15px) 0px,
+          15px 0px,
+          15px 3px,
+          9px 3px,
+          9px 6px,
+          6px 6px,
+          6px 9px,
+          3px 9px,
+          3px 15px,
+          0px 15px,
+          0px 50%,
+          3px 50%,
+          3px 15px,
+          6px 15px,
+          6px 9px,
+          9px 9px,
+          9px 6px,
+          15px 6px,
+          15px 3px,
+          calc(100% - 15px) 3px,
+          calc(100% - 15px) 6px,
+          calc(100% - 9px) 6px,
+          calc(100% - 9px) 9px,
+          calc(100% - 6px) 9px,
+          calc(100% - 6px) 15px,
+          calc(100% - 3px) 15px,
+          calc(100% - 3px) calc(100% - 15px),
+          calc(100% - 6px) calc(100% - 15px),
+          calc(100% - 6px) calc(100% - 9px),
+          calc(100% - 9px) calc(100% - 9px),
+          calc(100% - 9px) calc(100% - 6px),
+          calc(100% - 15px) calc(100% - 6px),
+          calc(100% - 15px) calc(100% - 3px),
+          15px calc(100% - 3px),
+          15px calc(100% - 6px),
+          9px calc(100% - 6px),
+          9px calc(100% - 9px),
+          6px calc(100% - 9px),
+          6px calc(100% - 15px),
+          3px calc(100% - 15px),
+          3px 50%,
+          0px 50%);
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background: var(--gray);
+      display: block;
+      pointer-events: none;
+    }
+
+    .pixel-corners::after {
+      margin: -3px;
+    }
+
+    @media (prefers-color-scheme: light) {
+      ul li img {
+        filter: invert(1);
+    }
+    }
+    
   </style>
 </head>
 
-<body >
-  <header style="display: flex; justify-content: space-between; font-size: 2em; width: 100%; margin: 0.5em 0; color: coral;">
+<body>
+  <!-- <binary-ribbon 
+        text="In the beginning God created the heaven and the earth. And the earth was without form, and void; and darkness was upon the face of the deep. And the Spirit of God moved upon the face of the waters. And God said, Let there be light: and there was light."
+        width="100"
+        pixel-size="8"
+        one-color="#f0f0f0"
+        zero-color="#333"
+        shape="circle"
+        background="#111"
+        auto-scroll="true"
+        scroll-speed="40">
+    </binary-ribbon> -->
+  <header
+    style="display: flex; justify-content: space-between; font-size: 2em; width: 100%; margin: 0.5em 0; color: coral;">
     <div style="flex: 1;"></div>
-    <div style="flex: 1; display: flex; justify-content: center;" >
-      <div style="max-width: 1.1em; max-height: 1.1em; flex: 1;"><svg fill="currentColor" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg" version="1.1" viewBox="0 -622 740 752.99999"    >
-        <g  transform="translate(-51,-341)">
-          <path d="M 333,472 H 508 V 247 L 703,360 791,208 596,96 791,-16 703,-168 508,-55 V -281 H 333 V -56 L 138,-168 51,-16 245,96 51,208 138,360 333,248 c 0,0 0,224 0,224 z" />
-        </g>
-      </svg></div>
-      </div>
-    <div style="flex: 1; text-align: right; display: flex; align-items: center; justify-content: flex-end; font-size: 0.5em;"><a href="/out/about.html">About</a></div>
+    <div style="flex: 1; display: flex; justify-content: center;">
+      <img src="/assets/icons/asterix.png" style="max-width: 1.1em; max-height: 1.1em;" alt="">
+      <!-- <div style="max-width: 1.1em; max-height: 1.1em; flex: 1;"><svg fill="currentColor"
+          xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg" version="1.1"
+          viewBox="0 -622 740 752.99999">
+          <g transform="translate(-51,-341)">
+            <path
+              d="M 333,472 H 508 V 247 L 703,360 791,208 596,96 791,-16 703,-168 508,-55 V -281 H 333 V -56 L 138,-168 51,-16 245,96 51,208 138,360 333,248 c 0,0 0,224 0,224 z" />
+          </g>
+        </svg>
+      </div> -->
+    </div>
+    <div
+      style="flex: 1; text-align: right; display: flex; align-items: center; justify-content: flex-end; font-size: 0.5em;">
+      <!-- <a href="/out/about.html">About</a> -->
+    </div>
   </header>
-  <p class="txt-c whitespace-pre human">ʕっ•ᴥ•ʔっ
-    Hi!, I'm David, a hobbyist techie from India, Welcome to my tiny slice of the internet
+  <p class="txt-c whitespace-pre">ʕっ•ᴥ•ʔっ
+    Hi!, I'm David, an electronics engineer & roboticist, Welcome to my tiny slice of the internet
   </p>
 
+  <ol style="display: flex; list-style-type: none; gap: 1em; margin-top: 0; justify-content: center;">
+    <li><a href="/out/about.html"> About</a></li>
+    <li><a href="https://red-herring.notion.site/LinkDB-af4d322446f342f1a6fe7463ee5db8d3"> Link Collection</a></li>
+    <li><a href="https://github.com/davidnoronha1"> Projects</a></li>
+    <li><a href="/experiments/index.html"> Experiments</a></li>
+  </ol>
+
   <h1>Projects</h1>
-  <a href="/projects">See all (w/ writeups)</a>
-  <div class="split" style="margin-top: 1em;">
-    <div>
-      <a href="https://github.com/undefinedDarkness/mkr">mkr</a>
-      <p>A fast extensible app runner for the Linux Desktop</p>
+  <div style="display: flex; gap:1em; flex-wrap: wrap; justify-content: center; margin: 1em 0;">
+    <div class="card pixel-corners" style="flex: 1">
+      <glb-model-viewer   scale="5" 
+  pos="-0.18,-0.06,0" 
+  rot="-167,-36,179"  
+  style="aspect-ratio: 1 / 1; display: block;" src="/assets/models/simple-auv-v1.glb"></glb-model-viewer>
+      <h2>Mira</h2>
     </div>
-
-    <div>
-      <!-- <img src="https://i.imgur.com/QudIqH1.png" alt=""> -->
-      <a href="https://github.com/undefinedDarkness/colr">colr</a>
-      <p>A beautiful colour picker inspired by the MS Powertoys colour picker</p>
+    <div class="card pixel-corners" style="flex: 1">
+      <h2>Research</h2>
     </div>
-
-    <div>
-      <a href="https://github.com/undefinedDarkness/dither-experiments">dither-experiments</a>
-      <p>An experiment in optimizing image processing on the CPU and the GPU</p>
-    </div>
-
-    <div>
-      <a href="https://github.com/undefinedDarkness/gbz">gbz</a>
-      <p>A work-in-progress GameBoy emulator written in C#</p>
+    <div class="card pixel-corners" style="flex: 1">
+      <h2>Memoria</h2>
     </div>
   </div>
+
 
   <h1>Blog</h1>
   <main class='page  ov' style="padding-bottom: 3em;">
     <ul>
-      <li>
-        <h2>2021</h1>
-      </li>
       !POSTS-2021!
-    </ul>
-
-    <ul>
-      <li>
-        <h2>2022</h1>
-      </li>
       !POSTS-2022!
-    </ul>
-
-    <ul>
-      <li>
-        <h2>2024</h1>
-      </li>
       !POSTS-2024!
-    </ul><ul>
-      <li>
-        <h2>2025</h1>
-      </li>
       !POSTS-2025!
-    </ul>
-    <ul>
-      <li>
-        <h2>Random</h1>
-      </li>
       !POSTS-RANDOM!
-      <li>
+    </ul>
+    <!-- <li>
         <a href="https://red-herring.notion.site/">Tidbits</a>
       </li>
       <li>
         <a href="https://red-herring.notion.site/LinkDB-af4d322446f342f1a6fe7463ee5db8d3">LinkDB</a>
-      </li>
-    </ul>
-    <ul>
+      </li> -->
+    <!-- <ul>
       <li>
         <h2>Miscellaneous</h1>
       </li>
       <li><a href="/docs/raylib/index.html">Raylib Documentation (Outdated)</a></li>
-    </ul>
+      <li><a href="/experiments/code-highlight-cp/index.html">Code Highlight Copy</a></li>
+    </ul> -->
   </main>
+  <script src="/assets/ascii-3d-viewer.js" type="module"></script>
 </body>
 
 </html>
